# APCWeek3

./: CMakeLists.txt
assignment/: CMakeLists.txt  main.cpp
assignment/clib/: CMakeLists.txt  file_writer.cpp  file_writer.h  itext_writer.h  logger.c  logger.h
assignment/include/: console_writer.h  file_writer_adapter.h  ilogger.h  itext_writer.h  logger.h  multi_writer.h  program.h  stream_writer.h
assignment/include/builders/: ilogger_builder.h  logger_builder.h
assignment/include/decorators/: decorator.h  runningtime_decorator.h  timestamp_decorator.h
assignment/include/global/: runningtime_provider.h
assignment/source/: CMakeLists.txt  console_writer.cpp  file_writer_adapter.cpp  logger.cpp  multi_writer.cpp  program.cpp  stream_writer.cpp
assignment/source/builder/: logger_builder.cpp
assignment/source/decorators/: runningtime_decorator.cpp  timestamp_decorator.cpp
assignment/source/global/: runningtime_provider.cpp
